[*] Fix bugs after review

--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/index.html
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/index.html
@@ -18,57 +18,57 @@
     <div class="details-wrap">
       <div class="profile">
         <img class="profile__avatar" src="images/avatar.jpg"/>
-        <div class="profile-info">
-          <div class="profile-info__name">
+        <div class="profile__info">
+          <div class="profile__info-name">
             Aliona Mozol
           </div>
-          <div class="profile-info__profession">
+          <div class="profile__info-profession">
             Full-Stack Developer
           </div>
         </div>
       </div>
       <nav class="nav">
-        <div class="nav-item">
-          <a href="#intro" class="nav-item__link">
-            <i class="fa fa-home nav-item__icon"></i>
+        <div class="nav__item">
+          <a href="#intro" class="nav__item-link">
+            <i class="fa fa-home nav__item-icon"></i>
             Intro
           </a>
         </div>
-        <div class="nav-item">
-          <a href="#portfolio" class="nav-item__link">
-              <i class="fa fa-th nav-item__icon"></i>
+        <div class="nav__item">
+          <a href="#portfolio" class="nav__item-link">
+              <i class="fa fa-th nav__item-icon"></i>
               Portfolio
             </a>
         </div>
-        <div class="nav-item">
-          <a href="#about-me" class="nav-item__link">
+        <div class="nav__item">
+          <a href="#about-me" class="nav__item-link">
             <i class="fa fa-user nav-item__icon"></i>
             About Me
           </a>
         </div>
-        <div class="nav-item">
-          <a href="#contact" class="nav-item__link">
-            <i class="fa fa-envelope nav-item__icon"></i>
+        <div class="nav__item">
+          <a href="#contact" class="nav__item-link">
+            <i class="fa fa-envelope nav__item-icon"></i>
             Contact
           </a>
         </div>
       </nav>
     </div>
-    <ul class="social-networks-list">
-      <li class="social-networks-list__item">
-        <i class="fa fa-twitter social-networks-list__icon"></i>
+    <ul class="socials-list">
+      <li class="socials-list__item">
+        <i class="fa fa-twitter socials-list__icon"></i>
       </li>
-      <li class="social-networks-list__item">
-        <i class="fa fa-facebook social-networks-list__icon"></i>
+      <li class="socials-list__item">
+        <i class="fa fa-facebook socials-list__icon"></i>
       </li>
-      <li class="social-networks-list__item">
-        <i class="fa fa-github social-networks-list__icon"></i>
+      <li class="socials-list__item">
+        <i class="fa fa-github socials-list__icon"></i>
       </li>
-      <li class="social-networks-list__item">
-        <i class="fa fa-dribbble social-networks-list__icon"></i>
+      <li class="socials-list__item">
+        <i class="fa fa-dribbble socials-list__icon"></i>
       </li>
-      <li class="social-networks-list__item">
-        <i class="fa fa-envelope social-networks-list__icon"></i>
+      <li class="socials-list__item">
+        <i class="fa fa-envelope socials-list__icon"></i>
       </li>
     </ul>
   </div>
@@ -77,7 +77,7 @@
     <div class="toggle-menu">
       <i class="fa fa-bars toggle-menu__icon"></i>
     </div>
-    <div class="content intro" id="intro">
+    <div class="intro" id="intro">
       <div class="intro__text-wrap">
         <h1 class="intro__title">
           Hi! I'm <span class="intro__key-word">Prologue</span>,
@@ -85,14 +85,14 @@
           site template
           designed by <span class="intro__key-word">HTML5 UP</span>.
         </h1>
-        <div class="intro__description">
+        <p class="intro__description">
           Ligula scelerisque justo sem accumsan diam quis
           vitae natoque dictum sollicitudin elementum.
-        </div>
+        </p>
       </div>
       <button class="intro__button button">Magna Aliquam</button>
     </div>
-    <div class="content portfolio" id="portfolio">
+    <div class="content content--portfolio" id="portfolio">
       <h2 class="content__header">
         Portfolio
       </h2>
@@ -105,38 +105,38 @@
       </p>
       <div class="portfolio-cards">
         <div class="portfolio-cards__wrap">
-          <div class="portfolio-cards__item">
-            <img src="images/pic02.jpg" class="portfolio-cards__img"/>
-            <p class="portfolio-cards__title">Ipsum Feugiat</p>
+          <div class="portfolio-card">
+            <img src="images/pic02.jpg" class="portfolio-card__img"/>
+            <p class="portfolio-card__title">Ipsum Feugiat</p>
           </div>
-          <div class="portfolio-cards__item">
-            <img src="images/pic03.jpg" class="portfolio-cards__img"/>
-            <p class="portfolio-cards__title">Rhoncus Semper</p>
-          </div>
-        </div>
-        <div class="portfolio-cards__wrap">
-          <div class="portfolio-cards__item">
-            <img src="images/pic04.jpg" class="portfolio-cards__img"/>
-            <p class="portfolio-cards__title">Magna Nullam</p>
+          <div class="portfolio-card">
+            <img src="images/pic03.jpg" class="portfolio-card__img"/>
+            <p class="portfolio-card__title">Rhoncus Semper</p>
           </div>
         </div>
         <div class="portfolio-cards__wrap">
-          <div class="portfolio-cards__item">
-            <img src="images/pic05.jpg" class="portfolio-cards__img"/>
-            <p class="portfolio-cards__title">Dolor Penatibus</p>
+          <div class="portfolio-card">
+            <img src="images/pic04.jpg" class="portfolio-card__img"/>
+            <p class="portfolio-card__title">Magna Nullam</p>
           </div>
-          <div class="portfolio-cards__item">
-            <img src="images/pic06.jpg" class="portfolio-cards__img"/>
-            <p class="portfolio-cards__title">Orci Convallis</p>
+        </div>
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-card">
+            <img src="images/pic05.jpg" class="portfolio-card__img"/>
+            <p class="portfolio-card__title">Dolor Penatibus</p>
+          </div>
+          <div class="portfolio-card">
+            <img src="images/pic06.jpg" class="portfolio-card__img"/>
+            <p class="portfolio-card__title">Orci Convallis</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="content about-me" id="about-me">
+    <div class="content content--about-me" id="about-me">
       <h2 class="content__header">
         About Me
       </h2>
-      <img class="about-me__img" src="images/pic08.jpg" />
+      <img class="content__img" src="images/pic08.jpg" />
       <p class="content__text">
         Tincidunt eu elit diam magnis pretium accumsan etiam id urna.
         Ridiculus ultricies curae quis et rhoncus velit.
@@ -166,7 +166,7 @@
           <input class="contact-form__input" placeholder="Email"/>
         </div>
         <textarea class="contact-form__textarea" placeholder="Message"></textarea>
-        <button class="contact__button button">Send Message</button>
+        <button class="contact-form__button button">Send Message</button>
       </form>
 
     </div>
