Fix issues from conversations

--- a/classworks/maxim-shpak/03_git/src/index.html
+++ b/classworks/maxim-shpak/03_git/src/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="./styles/base/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="./styles/base/base.pcss"> -->
     <link rel="shortcut icon" href="./images/avatar.jpg" type="image/x-icon" />
 </head>
 
@@ -41,23 +40,18 @@
         </div>
         <ul class="social-list">
             <li class="social-list__element">
-                <!-- <i class="fa fa-twitter" aria-hidden="true"></i> -->
                 <img class="svg" src="./images/awesome-font-icons-svg/twitter.svg" />
             </li>
             <li class="social-list__element">
-                <!-- <i class="fa fa-facebook" aria-hidden="true"></i> -->
                 <img class="svg" src="./images/awesome-font-icons-svg/facebook.svg" />
             </li>
             <li class="social-list__element">
-                <!-- <i class="fa fa-github" aria-hidden="true"></i> -->
                 <img class="svg" src="./images/awesome-font-icons-svg/github.svg" />
             </li>
             <li class="social-list__element">
-                <!-- <i class="fa fa-dribbble" aria-hidden="true"></i> -->
                 <img class="svg" src="./images/awesome-font-icons-svg/dribbble.svg" />
             </li>
             <li class="social-list__element">
-                <!-- <i class=" fa fa-envelope" aria-hidden="true"></i> -->
                 <img class="svg" src="./images/awesome-font-icons-svg/envelope.svg" />
             </li>
         </ul>
@@ -66,19 +60,19 @@
         <i class="fa fa-arrow-left toggle-button__icon" aria-hidden="true"></i>
     </div>
     <main class="content-list">
-        <div class="content-list__element intro">
-            <div class="intro-text-block">
-                <p class="intro-text-block__element--large">Hi! I'm
-                    <span class="text--light">Prologue</span>, a
-                    <span class="text--light text--underline">free</span>
+        <div class="content-list__element content-list__element--intro">
+            <div class="text-block">
+                <p class="text-block__element--large">Hi! I'm
+                    <span class="light">Prologue</span>, a
+                    <span class="light underline">free</span>
                     responsive site template designed by
-                    <span class="text--light text--underline">HTTP UP.</span>
+                    <span class="light underline">HTTP UP.</span>
                 </p>
-                <p class="intro-text-block__element">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum sollicitudin elementum.</p>
+                <p class="text-block__element">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum sollicitudin elementum.</p>
             </div>
             <button class="rounded-button">Magna Aliquam</button>
         </div>
-        <div class="content-list__element portfolio">
+        <div class="content-list__element">
             <div class="pretty-text-block">
                 <p class="pretty-text-block__element--large">Portfolio</p>
                 <p class="pretty-text-block__element">Vitae natoque dictum etiam semper magnis enim feugiat convallis egestat rhoncus ridiculus in quis risus amet
@@ -88,23 +82,37 @@
             <div class="grid">
                 <div class="grid-row">
                     <div class="grid-column">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic02.jpg">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic03.jpg">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic05.jpg">
+                        <div class="image-block">
+                            <img class="image-block__element" src="./images/grid-pictures/pic02.jpg">
+                        </div>
+                        <div class="image-block">
+                            <img class="image-block__element" src="./images/grid-pictures/pic03.jpg">
+                        </div>
+                        <div class="image-block">
+                            <img class="image-block__element" src="./images/grid-pictures/pic05.jpg">
+                        </div>
                     </div>
                     <div class="grid-column">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic04.jpg">
+                        <div class="image-block">
+                            <img class="image-block__element" src="./images/grid-pictures/pic04.jpg">
+                        </div>
                     </div>
                     <div class="grid-column">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic06.jpg">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic07.jpg">
-                        <img class="grid-column__element" src="./images/grid-pictures/pic08.jpg">
+                        <div class="image-block">
+                            <img class="image-block__element" src="./images/grid-pictures/pic06.jpg">
+                        </div>
+                        <div class="image-block">
+                                <img class="image-block__element" src="./images/grid-pictures/pic07.jpg">
+                        </div>
+                        <div class="image-block">
+                            <img class="image-block__element" src="./images/grid-pictures/pic08.jpg">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="content-list__element about"></div>
-        <div class="content-list__element contact">
+        <div class="content-list__element"></div>
+        <div class="content-list__element content-list__element--contact">
             <div class="pretty-text-block">
                 <p class="pretty-text-block__element--large">Contact</p>
                 <p class="pretty-text-block__element">Elementum sem parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorpet dolor. Libero
