[Task-3] - Fix issues.

--- a/classworks/eugene-shved/03_html_css_part_2/boilerplate/src/index.html
+++ b/classworks/eugene-shved/03_html_css_part_2/boilerplate/src/index.html
@@ -19,11 +19,9 @@
           <img src="images/avatar.jpg">
         </div>
         <div class="profile__text-info">
-          <div class="profile__full-name"> 
-            <p>
+            <p class="profile__full-name">
               Jane Doe
             </p>
-          </div>
           <div class="profile__specialization">
             Hyperspace Engineer
           </div>
@@ -65,8 +63,8 @@
   </div>
   <main>
     <div class="header">
-      <div class="tooltip">
-        <a href="#" class="tooltip_link"><i class="fa fa-bars fa-3x"></i></a>
+      <div class="header__tooltip">
+        <i class="fa fa-bars fa-3x"></i></a></button>
       </div>
       <div class="greetings">
         <div class="greetings__item">
@@ -98,22 +96,22 @@
           </div>
         </div>
       </div>
-      <div class="images">
-        <div class="images__item">
+      <div class="portfolio-images">
+        <div class="portfolio-images__item">
           <img src="images/pic02.jpg" alt="Lorem Ipsum">
-          <div class="images__label">Lorem Ipsum</div>
+          <div class="portfolio-imageimages__label">Lorem Ipsum</div>
           <img src="images/pic03.jpg" alt="Lorem Ipsum">
           <div class="images__label">Lorem Ipsum</div>
         </div>
-        <div class="images__item">
+        <div class="portfolio-images__item">
           <img src="images/pic04.jpg" alt="Lorem Ipsum">
           <div class="images__label">Lorem Ipsum</div>
         </div>
-        <div class="images__item">
+        <div class="portfolio-images__item">
           <img src="images/pic05.jpg" alt="Lorem Ipsum">
-          <div class="images__label">Lorem Ipsum</div>
+          <div class="portfolio-images__label">Lorem Ipsum</div>
           <img src="images/pic06.jpg" alt="Lorem Ipsum">
-          <div class="images__label">Lorem Ipsum</div>
+          <div class="portfolio-images__label">Lorem Ipsum</div>
         </div>
       </div>        
     </div>
