--- a/classworks/aliona-mozol/11_koa/task/src/web/client/index.html
+++ b/classworks/aliona-mozol/11_koa/task/src/web/client/index.html
@@ -9,12 +9,12 @@
     <div class="title"></div>
     <div class="centered">
       <div class="cowwords">
-        <form class="vacations">
+        <form id="post-form" method="post" class="vacations" name="vacations" onsubmit="postData()">
           <h3 class="vacations__header">How did You spend your winter vacations?</h3>
-          <input class="vacations__name-input" placeholder="Name"/>
-          <input class="vacations__surname-input" placeholder="Surname"/>
-          <textarea class="vacations__description" placeholder="Description"></textarea>
-          <select class="vacations__mark-select">
+          <input name="name" class="vacations__name-input" placeholder="Name"/>
+          <input name="surname" class="vacations__surname-input" placeholder="Surname"/>
+          <textarea name="description" class="vacations__description" placeholder="Description"></textarea>
+          <select name="mark" class="vacations__mark-select">
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -27,8 +27,10 @@
             <option value="9">9</option>
             <option value="10">10</option>
           </select>
+          <button type="submit">Submit</button>
         </form>
       </div>
     </div>
+    <script src="formProcessing.js"></script>
   </body>
 </html>
