--- a/classworks/evgeny-marushko/11_koa/src/web/client/index.html
+++ b/classworks/evgeny-marushko/11_koa/src/web/client/index.html
@@ -27,7 +27,7 @@
       <input type="submit" id="submit" />
     </form>
     <div class="views-count" id="viewsCount"></div>
-    <script src="main.js"></script>
+    <script src="/public/bundle.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       window.onload = () => {
