[+] Add some code

--- a/classworks/aliona-mozol/11_koa/task/src/web/client/index.html
+++ b/classworks/aliona-mozol/11_koa/task/src/web/client/index.html
@@ -9,7 +9,7 @@
     <div class="title"></div>
     <div class="centered">
       <div class="cowwords">
-        <form id="post-form" method="post" class="vacations" name="vacations" onsubmit="postData()">
+        <form id="post-form" method="post" class="vacations" name="vacations">
           <h3 class="vacations__header">How did You spend your winter vacations?</h3>
           <input name="name" class="vacations__name-input" placeholder="Name"/>
           <input name="surname" class="vacations__surname-input" placeholder="Surname"/>
@@ -31,6 +31,5 @@
         </form>
       </div>
     </div>
-    <script src="formProcessing.js"></script>
   </body>
 </html>
