Remove console.logs, Add ValidationError Handling

--- a/classworks/pavel-kalugin/11_koa/web/client/index.html
+++ b/classworks/pavel-kalugin/11_koa/web/client/index.html
@@ -22,8 +22,7 @@
 	несколько связанных страниц через ссылки и выкладывать сайт в интернет.
 	<hr>
 	Этот материал был написан благодаря сайту
-	<a href=http://zarabotat-na-sajte.ru/>
-	http://zarabotat-na-sajte.ru/</a> - за что я ему благодарен.
+	<a href="reviews.html"/>!!!!!!!!!!!!!!!КЛИКАЙ ДЛЯ РЕВЬЮВОВ!!!!!!!!!!!!	</a> - за что я ему благодарен.
 	<br/><br/>
 	Спасибо. До новых встреч!
 	<form class='form' action="postForm" method="post">
@@ -45,6 +44,6 @@
 		<input class = 'submit' type="submit" value="Отправить">
 	</form>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="main.js"></script>
-</body>
+	<script src="./main.js"></script>
+	</body>
 </html>
