--- a/classworks/pavel-kalugin/11_koa/web/client/reviews.html
+++ b/classworks/pavel-kalugin/11_koa/web/client/reviews.html
@@ -3,8 +3,9 @@
 	<title>Reviews</title>
 </head>
 <body class='reviews'>
+	<a href="index.html">вернуться</a>
   <h1>ALL REVIEWS</h1>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="reviews.js"></script>
+	<script src="./reviews.js"></script>
 </body>
 </html>
