--- a/classworks/aliona-mozol/11_koa/koa-project/src/client/index.html
+++ b/classworks/aliona-mozol/11_koa/koa-project/src/client/index.html
@@ -30,7 +30,9 @@
           <button type="submit">Submit</button>
         </form>
         <div class="all-right"></div>
+        <a href="/reviews.html">All reviews</a>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
