--- a/classworks/aliona-mozol/11_koa/koa-project/src/client/reviews.html
+++ b/classworks/aliona-mozol/11_koa/koa-project/src/client/reviews.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Koa</title>
+     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
   </head>
   <body>
     <div class="counter"></div>
     <div class="centered">
       <div class="content">
-        <div class="main-text">
+        <div class="text">
           All reviews:
         </div>
-
+        <div class="reviews"></div>
+        <a href="/index.html">Back to interview</a>
       </div>
     </div>
+    <script src="reviews.js"></script>
   </body>
 </html>
