--- a/classworks/pavel-kalugin/11_koa/web/client/index.html
+++ b/classworks/pavel-kalugin/11_koa/web/client/index.html
@@ -43,7 +43,6 @@
 		</select>
 		<input class = 'submit' type="submit" value="Отправить">
 	</form>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="./main.js"></script>
+	<script src="/static/index.js"></script>
 	</body>
 </html>
