--- a/classworks/pavel-kalugin/11_koa/web/client/reviews.html
+++ b/classworks/pavel-kalugin/11_koa/web/client/reviews.html
@@ -5,7 +5,6 @@
 <body class='reviews'>
 	<a href="index.html">вернуться</a>
   <h1>ALL REVIEWS</h1>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="./reviews.js"></script>
+	<script src="/static/reviews.js"></script>
 </body>
 </html>
