--- a/classworks/anna_korosteleva/11_koa/src/web/client/reviews.html
+++ b/classworks/anna_korosteleva/11_koa/src/web/client/reviews.html
@@ -7,7 +7,7 @@
     <title>Reviews</title>
 </head>
 <body>
-    <div class="reviews">sdfsfsfsfsfd</div>
+    <div class="reviews"></div>
     <script src="/build/reviews.js"></script>
 </body>
 </html>
