Add empty sections and section's navigation

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -21,7 +21,7 @@
     </div>
     <ul class="sidebar__navigation">
       <li class="sidebar__navigation-item">
-        <a class="sidebar__navigation-item-link">
+        <a href="#intro" class="sidebar__navigation-item-link">
           <div class="item">
             <div class="item__icon-container">
               <i class="item__icon fa fa-home" ></i>
@@ -31,7 +31,7 @@
         </a>
       </li>
       <li class="sidebar__navigation-item">
-        <a class="sidebar__navigation-item-link">
+        <a href="#portfolio" class="sidebar__navigation-item-link">
           <div class="item">
             <div class="item__icon-container">
               <i class="item__icon fa fa-th" ></i>
@@ -41,7 +41,7 @@
         </a>
       </li>
       <li class="sidebar__navigation-item">
-        <a class="sidebar__navigation-item-link">
+        <a href="#" class="sidebar__navigation-item-link">
           <div class="item">
             <div class="item__icon-container">
               <i class="item__icon fa fa-user" ></i>
@@ -51,7 +51,7 @@
         </a>
       </li>
       <li class="sidebar__navigation-item">
-        <a class="sidebar__navigation-item-link">
+        <a href="#contact" class="sidebar__navigation-item-link">
           <div class="item">
             <div class="item__icon-container">
               <i class="item__icon fa fa-envelope" ></i>
@@ -69,5 +69,11 @@
         <div class="sidebar__footer-icon fa fa-envelope"></div>
     </div>
   </nav>
+  <section class="section section--first" id="intro">
+  </section>
+  <section class="section section--second" id="portfolio">
+  </section>
+  <section class="section" id="contact">
+  </section>
 </body>
 </html>
