Add component Button, create first section

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -69,9 +69,19 @@
         <div class="sidebar__footer-icon fa fa-envelope"></div>
     </div>
   </nav>
-  <section class="section section--first" id="intro">
+  <section class="section section--background-image" id="intro">
+    <div class="section__wraper">
+      <p class="section__large-paragraph">Hi! I'm <span class="section--white">Prologue</span>,
+        a <span class="section--white section--dashed">free</span> responsive site
+        template designed by <span class="section--white section--dashed">HTML5 UP</span>.</p>
+    </div>
+    <div class="section__wraper">
+      <p class="section__small-paragraph">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
+        sollicitudin elementum.</p>
+    </div>
+    <a class="button" href="#">Magna Aliquam</a>
   </section>
-  <section class="section section--second" id="portfolio">
+  <section class="section section--double-height" id="portfolio">
   </section>
   <section class="section" id="contact">
   </section>
