--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -70,20 +70,29 @@
     </div>
   </nav>
   <section class="section section--background-image" id="intro">
-    <div class="section__wraper">
-      <p class="section__large-paragraph">Hi! I'm <span class="section--white">Prologue</span>,
-        a <span class="section--white section--dashed">free</span> responsive site
-        template designed by <span class="section--white section--dashed">HTML5 UP</span>.</p>
-    </div>
-    <div class="section__wraper">
-      <p class="section__small-paragraph">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
-        sollicitudin elementum.</p>
-    </div>
+    <p class="section__large-paragraph">Hi! I'm <span class="section--white">Prologue</span>,
+      a <span class="section--white section--dashed">free</span> responsive site
+      template designed by <span class="section--white section--dashed">HTML5 UP</span>.</p>
+    <p class="section__small-paragraph">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
+      sollicitudin elementum.</p>
     <a class="button" href="#">Magna Aliquam</a>
   </section>
   <section class="section section--double-height" id="portfolio">
   </section>
   <section class="section" id="contact">
+    <h1 class="section__header">Contact</h1>
+      <p class="section__paragraph">Elementum sem parturient nulla quam placerat viverra mauris non cim
+        elit tempus ullamcorper dolor. Libero rutrum ut latinia donec curae
+        mus. Eleifend id porttitor acc ultricies lobortis sem nunc ridiculus
+        faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
+      <form class="form" action="" method="get">
+        <div class="form__wraper">
+          <input class="form__input" type="text" name="name" placeholder="Name">
+          <input class="form__input" type="email" name="email" placeholder="Email">
+        </div>
+        <input class="form__input form__input--message" type="text" name="message" placeholder="Message">
+        <input class="button" type="submit" name="button" value="Send Message">
+      </form>
   </section>
 </body>
 </html>
