--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -78,21 +78,30 @@
     <a class="button" href="#">Magna Aliquam</a>
   </section>
   <section class="section section--double-height" id="portfolio">
+    <h1 class="section__header">Portfolio</h1>
+    <p class="section__paragraph">Vitae natoque dictum etiam semper magnis enim feugiat convallis
+      convallis egestas rhoncus ridiculus in quis risus amet curabitur tempor
+     orci penaribus. Tellus erat mauris ipsum fermentum etiam vivamus eget.
+     Nunc nibh morbi quis fasce hendreit lacus ridiculus.</p>
+     <div class="figure">
+       <img class="figure__image" src="../images/pic02.jpg" alt="Ipsum Feugiat">
+       <p class="figure__caption">Ipsum Feugiat</p>
+     </div>
   </section>
   <section class="section" id="contact">
     <h1 class="section__header">Contact</h1>
-      <p class="section__paragraph">Elementum sem parturient nulla quam placerat viverra mauris non cim
-        elit tempus ullamcorper dolor. Libero rutrum ut latinia donec curae
-        mus. Eleifend id porttitor acc ultricies lobortis sem nunc ridiculus
-        faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
-      <form class="form" action="" method="get">
-        <div class="form__wraper">
-          <input class="form__input" type="text" name="name" placeholder="Name">
-          <input class="form__input" type="email" name="email" placeholder="Email">
-        </div>
-        <input class="form__input form__input--message" type="text" name="message" placeholder="Message">
-        <input class="button" type="submit" name="button" value="Send Message">
-      </form>
+    <p class="section__paragraph">Elementum sem parturient nulla quam placerat viverra mauris non cim
+      elit tempus ullamcorper dolor. Libero rutrum ut latinia donec curae
+      mus. Eleifend id porttitor acc ultricies lobortis sem nunc ridiculus
+      faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
+    <form class="form" action="" method="get">
+      <div class="form__wraper">
+        <input class="form__input" type="text" name="name" placeholder="Name">
+        <input class="form__input" type="email" name="email" placeholder="Email">
+      </div>
+      <input class="form__input form__input--message" type="text" name="message" placeholder="Message">
+      <input class="button" type="submit" name="button" value="Send Message">
+    </form>
   </section>
 </body>
 </html>
