Add Portfolio (second) section

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -9,6 +9,7 @@
   <script src="bundle.js"></script>
 </head>
 <body>
+
   <nav class="sidebar">
     <div class="sidebar__header">
       <div class="user">
@@ -69,6 +70,7 @@
         <div class="sidebar__footer-icon fa fa-envelope"></div>
     </div>
   </nav>
+
   <section class="section section--background-image" id="intro">
     <p class="section__large-paragraph">Hi! I'm <span class="section--white">Prologue</span>,
       a <span class="section--white section--dashed">free</span> responsive site
@@ -77,17 +79,59 @@
       sollicitudin elementum.</p>
     <a class="button" href="#">Magna Aliquam</a>
   </section>
+
   <section class="section section--double-height" id="portfolio">
     <h1 class="section__header">Portfolio</h1>
     <p class="section__paragraph">Vitae natoque dictum etiam semper magnis enim feugiat convallis
       convallis egestas rhoncus ridiculus in quis risus amet curabitur tempor
      orci penaribus. Tellus erat mauris ipsum fermentum etiam vivamus eget.
      Nunc nibh morbi quis fasce hendreit lacus ridiculus.</p>
-     <div class="figure">
-       <img class="figure__image" src="../images/pic02.jpg" alt="Ipsum Feugiat">
-       <p class="figure__caption">Ipsum Feugiat</p>
+     <div class="section__gallery">
+       <div class="section__colomn">
+         <div class="section__gallery-element">
+           <div class="figure">
+             <img class="figure__image" src="../images/pic02.jpg" alt="Ipsum Feugiat">
+             <p class="figure__caption">Ipsum Feugiat</p>
+           </div>
+         </div>
+         <div class="section__gallery-element">
+           <div class="figure">
+             <img class="figure__image" src="../images/pic04.jpg" alt="Magna Nullam">
+             <p class="figure__caption">Magna Nullam</p>
+           </div>
+         </div>
+       </div>
+       <div class="section__colomn">
+         <div class="section__gallery-element">
+           <div class="figure">
+             <img class="figure__image" src="../images/pic06.jpg" alt="Dolor Penatibus">
+             <p class="figure__caption">Dolor Penatibus</p>
+           </div>
+         </div>
+         <div class="section__gallery-element">
+           <div class="figure">
+             <img class="figure__image" src="../images/pic03.jpg" alt="Reugiat Ipsum">
+             <p class="figure__caption">Reugiat Ipsum</p>
+           </div>
+         </div>
+       </div>
+       <div class="section__colomn">
+         <div class="section__gallery-element">
+           <div class="figure">
+             <img class="figure__image" src="../images/pic05.jpg" alt="Nullam Magna">
+             <p class="figure__caption">Nullam Magna</p>
+           </div>
+         </div>
+         <div class="section__gallery-element">
+           <div class="figure">
+             <img class="figure__image" src="../images/pic07.jpg" alt="Penatibus Dolor">
+             <p class="figure__caption">Penatibus Dolor</p>
+           </div>
+         </div>
+       </div>
      </div>
   </section>
+
   <section class="section" id="contact">
     <h1 class="section__header">Contact</h1>
     <p class="section__paragraph">Elementum sem parturient nulla quam placerat viverra mauris non cim
@@ -103,5 +147,6 @@
       <input class="button" type="submit" name="button" value="Send Message">
     </form>
   </section>
+
 </body>
 </html>
