Feature: hide sidebar when screen width is small. Add Action button to show sidebar with small screen width

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <nav class="sidebar">
+  <aside class="sidebar">
     <div class="sidebar__header">
       <div class="user">
         <img class="user__avatar" src="images/avatar.jpg" alt="avatar" width="48" height="48">
@@ -69,7 +69,13 @@
         <div class="sidebar__footer-icon fa fa-dribbble"></div>
         <div class="sidebar__footer-icon fa fa-envelope"></div>
     </div>
-  </nav>
+  </aside>
+
+  <div class="action-button">
+    <div class="action-button__line"></div>
+    <div class="action-button__line"></div>
+    <div class="action-button__line"></div>
+  </div>
 
   <section class="section section--background-image" id="intro">
     <p class="section__large-paragraph">Hi! I'm <span class="section--white">Prologue</span>,
