Add script to make sidebar visible/hidden by click on Action button

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML and CSS part 2</title>
   <link rel="stylesheet" href="styles/base/font-awesome.min.css">
+  <script defer src="scripts/script.js"></script>
   <script src="bundle.js"></script>
 </head>
 <body>
@@ -71,7 +72,7 @@
     </div>
   </aside>
 
-  <div class="action-button">
+  <div id="actionButton" class="action-button">
     <div class="action-button__line"></div>
     <div class="action-button__line"></div>
     <div class="action-button__line"></div>
