--- a/classworks/eugene-shved/05_javascript/index.html
+++ b/classworks/eugene-shved/05_javascript/index.html
@@ -11,6 +11,7 @@
     <div class="buttons">
       <button class="start button">Start</button>
       <button class="stop button">Stop</button>
+      <button class="timer-change button">Timer</button>
       <button class="plus button">+ 10 seconds</button>
       <button class="minus button">- 10 seconds</button>
       <button class="reset button">Reset</button>
